--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,12 @@
             href="css/estilos.css" />
             <head>
                 <body>
-                    <h1> aqui vamos a hacer un blog del post <h1>
+                <div>id= "cabecera" >
+                    cabecera
+
+                
+
+                        <h1> aqui vamos a hacer un blog del post <h1>
                         <p>Y este es el parrafo de inicio <p>
                     <body>
                         y este es el parrafo de inicio donde vamos a explicar las cosas que se pueden hacer con ramas.
