agregado el contenido final adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -23,5 +23,6 @@ box shadow
 <font>arial estilos especiales dentro del css</font>
 </font>
 by natazo
-
+los blogs son la mejor forma de compartir info y tus ideas.
+hola hola hola
      
