modifique linea 10 cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
                 <body>
                 <div>id= "cabecera" >
                     cabecera
-
+blog de cabecera
                 
 
                         <h1> aqui vamos a hacer un blog del post <h1>
