--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
                 <div>id= "cabecera" >
                     cabecera
 
-                
+              blog master es maestro  
 
                         <h1> aqui vamos a hacer un blog del post <h1>
                         <p>Y este es el parrafo de inicio <p>
