--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,5 @@
-<html>
-    <head>
-        <title> El titulo del post <title>
+<html> Bienvenidos a  Hyperblog
+    title "Bienvenidos a Hyperblog" <title
             link rel="stylesheet" 
             href="css/estilos.css" />
             <head>
