una version de el hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,4 +1,4 @@
-<html> Bienvenidos a  Hyperblog
+<html> Bienvenidos a  Hyperblog 2.0
     title "Bienvenidos a Hyperblog" <title
             link rel="stylesheet" 
             href="css/estilos.css" />
