color de fondo logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,5 @@
 <html> Bienvenidos a  Hyperblog 2.0
-    title "Bienvenidos a Hyperblog" <title
+    title "Bienvenidos a Hyperblog version final con imagen dragon.png" <title
             link rel="stylesheet" 
             href="css/estilos.css" />
             <head>
@@ -14,7 +14,7 @@ se queda blog de cabecera
                         y este es el parrafo de inicio donde vamos a explicar las cosas que se pueden hacer con ramas.
                                 
 <html>
-
+una nueva rama y fuente de datos remoto
 container
 
 box shadow
