--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@ se queda blog de cabecera
                         <h1> aqui vamos a hacer un blog del post <h1>
                         <p>Y este es el parrafo de inicio <p>
                     <body>
-                        y este es el parrafo de inicio donde vamos a explicar las cosas que se pueden hacer con ramas.
+  acute acute acute                      y este es el parrafo de inicio donde vamos a explicar las cosas que se pueden hacer con ramas.
                                 
 <html>
 una nueva rama y fuente de datos remoto
