--- a/blogpost.html
+++ b/blogpost.html
@@ -1,4 +1,4 @@
-<html> Bienvenidos a  Hyperblog 2.0
+<html> Bienvenidos a  Hyperblog 2.0 es un blog <del> futuro</del>
     title "Bienvenidos a Hyperblog version final con imagen dragon.png" <title
             link rel="stylesheet" 
             href="css/estilos.css" />
@@ -12,7 +12,7 @@ se queda blog de cabecera
                         <p>Y este es el parrafo de inicio <p>
                     <body>
   acute acute acute                      y este es el parrafo de inicio donde vamos a explicar las cosas que se pueden hacer con ramas.
-                                
+   parrafo con tilde agregado en la letra i                             
 <html>
 una nueva rama y fuente de datos remoto
 container
