agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,8 @@ se queda blog de cabecera
   acute acute acute                      y este es el parrafo de inicio donde vamos a explicar las cosas que se pueden hacer con ramas.
    parrafo con tilde agregado en la letra i                             
 <html>
+    <p><img src="imagenes/gato.jpg
+widt" alt="100%"></p>
 una nueva rama y fuente de datos remoto
 container
 parrafo increibles
